Quark: Disable chain linking (Create already implements this)

--- a/overrides/config/quark-common.toml
+++ b/overrides/config/quark-common.toml
@@ -47,7 +47,7 @@
 	Experimental = true
 
 [automation]
-	"Chain Linkage" = true
+	"Chain Linkage" = false
 	"Chains Connect Blocks" = false
 	Chute = false
 	"Color Slime" = false
